[gd_scene load_steps=8 format=3 uid="uid://dka6vbuqd6pp2"]

[ext_resource type="Script" uid="uid://c2oy8gpax5ln3" path="res://Scripts/bichito_03.gd" id="1_x301k"]
[ext_resource type="Texture2D" uid="uid://bwipy3nt2gre1" path="res://Assets/Personajes/Bichitos/bicho 3 b.png" id="2_jpoe1"]
[ext_resource type="Texture2D" uid="uid://bx3aecmwmyhxb" path="res://Assets/Personajes/Bichitos/bicho 3 a.png" id="3_ku1mp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l06bk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jpoe1")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ku1mp")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_51vlg"]
radius = 118.0
height = 360.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uf3gr"]
radius = 945.66

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vdac8"]
radius = 118.0
height = 358.0

[node name="Bichito_03" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_x301k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l06bk")
animation = &"right"

[node name="Area2D_Monitorable" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Monitorable"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_51vlg")

[node name="Area2D_Monitoring" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Monitoring"]
rotation = 1.5708
shape = SubResource("CircleShape2D_uf3gr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vdac8")

[connection signal="area_entered" from="Area2D_Monitoring" to="." method="_on_area_2d_monitoring_area_entered"]
